<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#85000000"
    android:layout_height="match_parent"
    tools:context=".cerrarSesion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:background="#86A88F8F"
            android:padding="10dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="357dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/logo_ginger_cat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/txtNegro"
                    android:text="@string/txt_cerrar"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="263dp"
                    android:layout_height="41dp"
                    android:textSize="14dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/txt_cerrar_sesion"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="13dp">
                    <Button
                        android:layout_width="136dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_cancelar"
                        android:padding="15dp"
                        android:text="@string/cancelar" />

                    <Button
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:background="@drawable/btn_aceptar_cerrar"
                        android:padding="1dp"
                        android:text="@string/confirmar_cerrar"
                        android:textColor="@color/txtBlanco" />

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>