<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.RecuperarPassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/texto_encabezado_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="37dp"
                android:text="Recuperar contraseña"
                android:textColor="@color/txtAzul"
                android:textSize="24dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="205dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/cat_registro_alumno" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Ingresa todos tus datos y la nueva contraseña"
                android:textColor="@color/txtVerde"
                android:textSize="18dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombreAlumno"
                app:startIconDrawable="@drawable/ic_person_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNombreAlumno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidoPaterno"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_person_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtApellidoPaternoAlumno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidoMaterno"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_person_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtApellidoMaternoAlumno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtMatriculaLabel"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/matriculaAlumno"
                app:startIconDrawable="@drawable/ic_casino_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMatriculaAlumno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="9"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10sp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Carrera"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_group_work_black_24dp"
                    />

                <Spinner
                    android:id="@+id/spinnerCarrera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grupoAlumno"
                app:startIconDrawable="@drawable/ic_group_black_24dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtGrupoAlumno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10sp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Aula"
                        android:textSize="17sp"
                        android:drawableLeft="@drawable/ic_meeting_room_black_24dp"/>

                    <Spinner
                        android:id="@+id/spinnerAulaAlumno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Edificio"
                        android:textSize="17sp"
                        android:drawableLeft="@drawable/ic_meeting_room_black_24dp"/>

                    <Spinner
                        android:id="@+id/spinnerEdificioAlumno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="10sp"
                        />
                </LinearLayout>




            </LinearLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingresa nueva contraseña"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passAlumno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="8"/>

            </com.google.android.material.textfield.TextInputLayout>





            <Button
                android:id="@+id/btnRecuperarPass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/btn_registro_usuario"
                android:text="Recuperar contraseña"
                android:textColor="@color/txtBlanco" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>